Fix skill-view center alignment on Profile screen and Twitter History screen title size for mobile devices

--- a/src/public/css/twitter-history.css
+++ b/src/public/css/twitter-history.css
@@ -73,6 +73,10 @@
       margin-right:0%;
     }
 
+    #th-title {
+      font-size:3em;
+    }
+
     .history-text {
       font-size: 1.3em;
     }
